add tooltip option

--- a/demo/index.html
+++ b/demo/index.html
@@ -115,6 +115,15 @@
             </xmp></pre>
         </div>
 
+        <div class="row">
+            <div id="simple2"></div>
+            <pre class="prettyprint"><xmp>
+<Sparklines data={sampleData}>
+    <SparklinesLine tooltip={false} />
+</Sparklines>
+            </xmp></pre>
+        </div>
+
         <h2>Simple Curve</h2>
 
         <div class="row">
